Fix JVM options in Jpackage